fixed scroll x on mobile fiture section

--- a/src/input.css
+++ b/src/input.css
@@ -6,6 +6,10 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  @apply overflow-x-hidden;
+}
+
 .container-me {
   @apply max-w-full md:max-w-[90vw] xl:max-w-[80vw];
 }
@@ -23,7 +27,7 @@
 }
 
 .btn {
-  @apply inline-block py-2 px-6 rounded-full cursor-pointer;
+  @apply inline-block py-4 px-10 rounded-full cursor-pointer;
 }
 
 .transition-300ms {
@@ -114,7 +118,7 @@
 
 /* heading */
 .section-layout {
-  @apply py-8 mb-20 -mt-20 xl:py-16;
+  @apply py-8 px-4 mb-20 -mt-20 xl:py-16;
 }
 
 .title-heading {
@@ -128,27 +132,17 @@
 /* Card carousel */
 
 .card {
-  @apply flex flex-col justify-center items-center bg-bg-h hover:bg-black md:h-[130px] lg:h-[150px] xl:h-[175px] p-4 lg:px-6 rounded-2xl relative overflow-hidden cursor-pointer transition-300ms;
+  @apply mobile:basis-[15%] flex flex-col justify-center bg-bg-h  hover:bg-black md:h-[130px] lg:h-[150px] xl:h-[175px] p-4 lg:px-6 rounded-2xl relative overflow-hidden cursor-pointer transition-300ms;
 }
 
-.card:hover .card-title {
-  @apply text-white transition-300ms;
-}
-
-.card:hover .card-text {
-  @apply text-white transition-300ms;
-}
-
-.card:hover .card-img {
-  @apply scale-125 -translate-y-2 transition duration-1000 ease-in-out;
-}
+/* basic properties */
 
 .card-content {
-  @apply text-center md:text-left z-10 lg:mt-2 xl:mt-4;
+  @apply text-center md:text-left z-10 lg:mt-2;
 }
 
 .card-title {
-  @apply font-bold mb-1 lg:text-xl xl:mb-2;
+  @apply font-bold mb-1 text-lg lg:text-xl xl:mb-2;
 }
 
 .card-text {
@@ -157,4 +151,44 @@
 
 .card-img {
   @apply md:absolute md:bottom-0 md:right-[5%] md:w-[45%] xl:w-[40%];
+}
+
+/* card hover */
+
+.card:hover .card-title {
+  @apply text-white md:scale-110 md:translate-x-5 transition leading-none duration-1000 ease-out;
+}
+
+.card:hover .card-text {
+  @apply text-white scale-110 translate-x-5 transition duration-1000 ease-out;
+}
+
+.card:hover .card-img {
+  @apply scale-110 -translate-y-2 transition duration-1000 ease-in-out;
+}
+
+/* card expand */
+
+.card.card-expand {
+  @apply basis-[31.8%];
+}
+
+.card.card-expand .card-img {
+  @apply absolute w-[45%] right-0 bottom-0 -mr-3;
+}
+
+.card.card-expand .card-text {
+  @apply block;
+}
+
+.card.card-expand .card-content {
+  @apply text-left;
+}
+
+.card.card-expand .card-title {
+  @apply text-lg mb-3;
+}
+
+.card.card-expand:hover .card-title {
+  @apply mobile:scale-110 mobile:translate-x-5 transition leading-none duration-1000 ease-out;
 }
